--- a/css/media.css
+++ b/css/media.css
@@ -1,12 +1,8 @@
 @charset "UTF-8";
 
 @media screen and ( max-width: 1400px ) {
-  input[type=checkbox]#gnbcheck:checked ~ .header .gnb{
-    left: 0;
-  }
-  #mobile_close_btn{
-    display: block;
-  }
+  input[type=checkbox]#gnbcheck:checked ~ .header .gnb{ left: 0;}
+  #mobile_close_btn{ display: block; }
   #gnbbtn{ display: block; }
   #headerwrap .header .gnb{
     position: fixed;
@@ -17,9 +13,7 @@
     background: white;
     transition: 0.5s ease-in-out;
   }
-  #headerwrap .header .gnb .mainmenu{
-    margin-left: 0;
-  }
+  #headerwrap .header .gnb .mainmenu{ margin-left: 0; }
   #headerwrap .header .gnb ul.mainmenu{
     padding-top: 50px;
     width: 100%;
@@ -30,6 +24,85 @@
   }
   #all-wrap{
     width: 100%;
+  }
+  #main-content{
+    height: 800px;
+  }
+  #main-content .swiper-container{
+    padding-top: 50px;
+  }
+  #second .second-menu .menu1 .menu-top{ margin-right: 0px; }
+  #second .second-menu .menu1 .menu-top .menu-top01{ font-size: 20px;}
+  #second .second-menu .menu1 .menu-btn span{ font-size: 15px;}
+  #second .second-menu .menu1 .menu-btn p{ font-size: 12px; }
+  #third .item-wrap{
+    position: relative;
+    width: 100%;
+    display: block;
+  }
+  #third .item-wrap .item .item1{
+    display: flex;
+    align-items: flex-end;
+    justify-content: flex-end;
+    width: 50%;
+    height: 500px;
+  }
+  #third .item-wrap .item .item1 img{
+    width: auto;
+    height: 500px;
+    display: inline-block;
+    position: absolute;
+  }
+  #third .item-wrap .item .item1-txt{
+    width: 50%;
+    top: 57px;
+    left: 50%;
+    z-index: 100
+  }
+  #third .item-wrap .item2{
+    display: flex;
+    /* align-items: flex-start;
+    justify-content: flex-start; */
+    width: 100%;
+    height: 500px;
+  }
+
+  #third .item-wrap .item2 .item2-txt{
+    width: 50%;
+    right: 50%;
+  }
+  #third .item-wrap .item2 .item2-img{
+    width: auto;
+    height: 500px;
+    margin-top: 0;
+    position: absolute;
+    left: 50%;
+    top: 30%;
+  }
+  #third .item-wrap .item2 .item2-img img{
+    width: auto;
+    height: 500px;
+    margin-top: 0;
+    z-index: 50;
+  }
+  #fourth .swiper-slide h3{
+    font-size: 24px;
+  }
+  #fourth .swiper-slide p{
+    font-size: 30px;
+  }
+  #five .main-insta .instaimg{
+    width: 300px;
+    height: 300px;
+  }
+  #five .main-insta{
+    padding-bottom: 30px;
+  }
+  #five .insta-wrap{
+    margin-right: 30px;
+  }
+  #five .insta-wrap2{
+    margin-right: 30px;
   }
 }
 
