미디어쿼리 수정

--- a/css/media.css
+++ b/css/media.css
@@ -180,19 +180,19 @@
     height: 100%;
   }
   #six .info-wrap .info-text{
-    margin-left: 50px;
+    /* margin-left: 50px; */
   }
-  #six .info-wrap .info-text .fw-400{
+  #six .info-wrap .info-alltext .fw-400{
     font-size: 16px;
   }
-  #six .info-wrap .info-text .fs-50{
+  #six .info-wrap .info-alltext .fs-50{
     font-size: 40px;
   }
-  #six .info-wrap .info-text p{
+  #six .info-wrap .info-alltext p{
     font-size: 14px;
   }
   #six .info-wrap .info-icon .info-text{
-    margin-left: 50px;
+    /* margin-left: 50px; */
   }
   #footer .footer-wrap .footer-right{
     display: none;
@@ -246,19 +246,43 @@
     justify-content: flex-end;
   }
   #six .info-wrap .info-text{
-    width: 50%;
+    /* width: 50%; */
   }
-  #six .info-wrap .info-text .fw-400{
+  #six .info-wrap .info-alltext{
+    margin-right: 130px;
+    margin-left: 30px;
+  }
+  #six .info-wrap .info-alltext .fw-400{
     font-size: 14px;
   }
-  #six .info-wrap .info-text .fs-50{
+  #six .info-wrap .info-alltext .fs-50{
     font-size: 35px;
   }
-  #six .info-wrap .info-text p{
+  #six .info-wrap .info-alltext p{
     font-size: 12px;
   }
-  #six .info-wrap .info-text span{
-    font-size: 16px;
+  #six .info-wrap .info-alltext span{
+    font-size: 15px;
+  }
+  #six .info-wrap .info-alltext span:last-child{
+    font-size: 12px;
+  }
+  #footer .footer-wrap .footer-info .f-txt1{
+    font-size: 12px;
+  }
+  #footer .footer-wrap .footer-info .f-txt2{
+    font-size: 12px;
+  }
+  #footer .footer-wrap .footer-info .copyright{
+    font-size: 10px;
+  }
+  #footer .footer-wrap .footimg img{
+    width: 200px;
+    height: auto;
+  }
+  #familysite{
+    width: 170px;
+    height: 50px;
   }
 }
 
@@ -316,7 +340,7 @@
     margin-left: 0;
     bottom: 0;
     margin-top: 60px;
-    left: 25%;
+    left: 23%;
   }
   #second .second-menu .img2{
     width: 100%;
@@ -324,7 +348,7 @@
     left: 0%;
     bottom: 0;
     margin-top: 10px;
-    left: 25%;
+    left: 23%;
   }
   #second .second-menu .img3{
     width: 100%;
@@ -332,7 +356,7 @@
     left: 0%;
     bottom: 0;
     margin-top: 10px;
-    left: 25%;
+    left: 23%;
   }
   #second .second-menu .img4{
     width: 100%;
@@ -340,7 +364,94 @@
     left: 0%;
     bottom: 0;
     margin-top: 10px;
-    left: 25%;
+    left: 23%;
+  }
+  #third .item-wrap{
+    position: relative;
+    width: 100%;
+    min-height: 1600px;
+    display: block;
+    margin-top: 100px;
+    left: 29%;
+  }
+  #third .item-wrap .item .item1{
+    display: inline-block;
+    width: 100%;
+  }
+  #third .item-wrap .item .item1-txt{
+    position: absolute;
+    display: block;
+    left: 0;
+    top: 450px;
+    padding: 0;
+    padding-left: 10px;
+  }
+  #third .item-wrap .item2 .item2-txt{
+    position: absolute;
+    display: block;
+    left: 0;
+    right: 0%;
+    bottom: 0;
+    top: 1100px;
+  }
+  #third .item-wrap .item .item1 img{
+    width: auto;
+    display: block;
+    position: absolute;
+    height: 400px;
+    z-index: 110;
+  }
+  #third .item-wrap .item2 .item2-img img{
+    width: auto;
+    display: block;
+    position: absolute;
+    height: 400px;
+    bottom: 550px;;
+  }
+  #third .item-wrap .item2 .item2-img{
+    width: auto;
+    display: block;
+    position: relative;
+    top: 650px;
+    left: 0;
+  }
+  #third .item-wrap .item2{
+    display: block;
+    width: 100%;
+  }
+  #six .info-wrap{
+    display: block;
+  }
+  #six .info-wrap .info-img{
+    display: flex;
+    align-items: center;
+    justify-content: center;
+  }
+  #six .info-wrap .info-img img{
+    width: auto;
+    height: 400px;
+  }
+  #six .info-wrap .info-alltext{
+    display: block;
+    position: relative;
+    width: 50%;
+    margin: 0 auto;
+    padding-top: 70px;
+  }
+  #footer .footer-wrap .mobile-foot-logo{
+    display: inline-block;
+    position: absolute;
+    left: 0;
+    margin-left: 100px;
+    margin-top: 80px;
+    opacity: 0.6;
+  }
+  #footer .footer-wrap .mobile-foot-logo img{
+    width: 120px;
+    height: auto;
+  }
+  #familysite{
+    display: none;
   }
 }
 
