--- a/css/media.css
+++ b/css/media.css
@@ -26,6 +26,7 @@
   }
   #all-wrap{
     width: 100%;
+    margin: 0 auto;
   }
   #main-content{
     height: 800px;
@@ -105,7 +106,10 @@
   }
 }
 @media screen and ( max-width: 1200px ) {
-  #all-wrap{ width: 100%; }
+  #all-wrap{
+    width: 100%;
+    margin: 0 auto;
+  }
   #second{ width: 100%; max-height: 1200px; }
   #second .second-menu{
     /* overflow: hidden; */
@@ -200,7 +204,10 @@
 }
 
 @media screen and ( max-width: 960px ) {
-  #all-wrap{ width: 100%; }
+  #all-wrap{
+    width: 100%;
+    margin: 0 auto;
+  }
   #main-content { height: 650px;}
   #first .first-sec h2{
     margin-left: 30px;
@@ -236,6 +243,9 @@
   }
   #third .item-wrap .item2 .item2-img{
     top: 33%;
+  }
+  #fourth{
+    height: 550px;
   }
   #six{
     min-height: 0;
@@ -287,7 +297,10 @@
 }
 
 @media screen and ( max-width: 770px ){
-  #all-wrap{ width: 100%; }
+  #all-wrap{
+    width: 100%;
+    margin: 0 auto;
+  }
   .pt-50{
     padding-top: 0;
   }
@@ -418,6 +431,15 @@
   #third .item-wrap .item2{
     display: block;
     width: 100%;
+  }
+  #fourth{
+    height: 500px;
+  }
+  #fourth .swiper-slide h3{
+    font-size: 22px;
+  }
+  #fourth .swiper-slide p{
+    font-size: 26px;
   }
   #six .info-wrap{
     display: block;
