--- a/css/myinitial.css
+++ b/css/myinitial.css
@@ -49,7 +49,7 @@
 @import url('https://fonts.googleapis.com/css2?family=Noto+Sans+KR:wght@100;300;400;500;700;900&display=swap');
 @import url('https://fonts.googleapis.com/css2?family=Montaga&display=swap');
 @import url('https://fonts.googleapis.com/css2?family=Montserrat:wght@100;200;300;400;500;600;700;800;900&display=swap');
-body{ font-family: 'Noto Sans KR' sans-serif; color: #666666; }
+body{ font-family: 'Montserrat', 'Noto Sans Korean', 'Montaga', sans-serif; color: #666666; }
 body{ color: #666666; }
 *{ margin: 0; padding: 0; }
 ul,ol{ list-style: none; }
