--- a/css/style.css
+++ b/css/style.css
@@ -268,6 +268,7 @@ input[type=checked]#gnbcheck{ display: none; }
   width: 100%;
   height: 100vh;
   max-height: 1100px;
+  margin: 0 auto;
 }
 
 #main-content .swiper-container{
@@ -414,6 +415,7 @@ input[type=checked]#gnbcheck{ display: none; }
   overflow: hidden;
   position: relative;
   width: 100%;
+  height: auto;
   margin-top: 100px;
   margin-bottom: 100px;
   display: flex;
@@ -433,7 +435,8 @@ input[type=checked]#gnbcheck{ display: none; }
   height: 500px;
   background-repeat: no-repeat;
   position: relative;
-  margin-left: 13px;
+  margin-left: 10px;
+  margin-right: 5px;
 }
 
 #second .second-menu .img2{
@@ -441,6 +444,8 @@ input[type=checked]#gnbcheck{ display: none; }
   height: 500px;
   background-repeat: no-repeat;
   position: relative;
+  margin-right: 5px;
+  margin-left: 5px;
 }
 
 #second .second-menu .img3{
@@ -448,6 +453,8 @@ input[type=checked]#gnbcheck{ display: none; }
   height: 500px;
   background-repeat: no-repeat;
   position: relative;
+  margin-right: 5px;
+  margin-left: 5px;
 }
 
 #second .second-menu .img4{
@@ -455,6 +462,8 @@ input[type=checked]#gnbcheck{ display: none; }
   height: 500px;
   background-repeat: no-repeat;
   position: relative;
+  margin-right: 10px;
+  margin-left: 5px;
 }
 
 #second .second-menu .img1{ background-image: url("../img/mn_img01.jpg"); }
@@ -527,11 +536,13 @@ input[type=checked]#gnbcheck{ display: none; }
   color: white;
   font-weight: bold;
   padding-bottom: 8px;
+  font-size: 18px;
 }
 
 #second .second-menu .menu1 .menu-btn .btn-2 a{
   color: white;
   font-weight: bold;
+  font-size: 18px;
 }
 
 /* 섹션3 */
