--- a/css/media.css
+++ b/css/media.css
@@ -350,72 +350,83 @@
     width: 100%;
     min-height: 1400px;
   }
-  #second .second-menu{
+  #second .second-menu .img1{
     position: relative;
-    display: inline-block;
+    width: auto;
+    height: 350px;
+  }
+  #second .second-menu .img2{
+    position: relative;
+    width: auto;
+    height: 350px;
+  }
+  #second .second-menu .img3{
+    position: relative;
+    width: auto;
+    height: 350px;
+  }
+  #second .second-menu .img4{
+    position: relative;
+    width: auto;
+    height: 350px;
+  }
+  #second .second-menu .menu1 .menu-top{
+    margin-left: 20px;
+  }
+  #second .second-menu .menu1 .menu-top .menu-top01{
+    font-size: 22px;
+  }
+  #second .second-menu .menu1 .menu-btn .btn-1 a{
+    font-size: 16px;
+  }
+  #second .second-menu .menu1 .menu-btn .btn-2 a{
+    font-size: 16px;
+  }
+  #third{
     width: 100%;
     margin: 0 auto;
   }
-  #second .second-menu .img1{
-    position: relative;
-    width: 100%;
-    height: 300px;
-    margin-left: 0;
-    bottom: 0;
-    margin-top: 60px;
-    left: 23%;
-  }
-  #second .second-menu .img2{
-    width: 100%;
-    height: 300px;
-    left: 0%;
-    bottom: 0;
-    margin-top: 10px;
-    left: 23%;
-  }
-  #second .second-menu .img3{
-    width: 100%;
-    height: 300px;
-    left: 0%;
-    bottom: 0;
-    margin-top: 10px;
-    left: 23%;
-  }
-  #second .second-menu .img4{
-    width: 100%;
-    height: 300px;
-    left: 0%;
-    bottom: 0;
-    margin-top: 10px;
-    left: 23%;
-  }
   #third .item-wrap{
     position: relative;
-    width: 100%;
+    width: 50%;
     min-height: 1600px;
     display: block;
     margin-top: 100px;
-    left: 29%;
+    margin: 0 auto;
   }
   #third .item-wrap .item .item1{
-    display: inline-block;
     width: 100%;
+    position: relative;
   }
   #third .item-wrap .item .item1-txt{
-    position: absolute;
+    position: relative;
     display: block;
     left: 0;
-    top: 450px;
-    padding: 0;
-    padding-left: 10px;
+    width: 100%;
+    padding-left: 25px;
+    margin: 0 auto;
+    padding-top: 0;
+  }
+  #third .item-wrap .item .item1-txt p:first-child{
+    font-size: 18px;
+  }
+  #third .item-wrap .item .item1-txt p:nth-child(2){
+    font-size: 28px;
+  }
+  #third .item-wrap .item .item1-txt ul li a{
+    font-size: 14px;
   }
   #third .item-wrap .item2 .item2-txt{
     position: absolute;
     display: block;
+    width: 100%;
+    margin-top: 160px;
     left: 0;
-    right: 0%;
+    right: 0;
     bottom: 0;
     top: 1100px;
+    margin-left: 50px;
+    padding-top: 30px;
   }
   #third .item-wrap .item .item1 img{
     width: auto;
@@ -423,27 +434,32 @@
     position: absolute;
     height: 400px;
     z-index: 110;
+    background-position: center;
   }
   #third .item-wrap .item2 .item2-img img{
     width: auto;
     display: block;
     position: absolute;
-    height: 400px;
-    bottom: 550px;;
+    height: 410px;
+    z-index: 110;
+    background-position: center;
   }
   #third .item-wrap .item2 .item2-img{
-    width: auto;
+    width: 100%;
     display: block;
     position: relative;
-    top: 650px;
-    left: 0;
+    left: 30px;
   }
   #third .item-wrap .item2{
     display: block;
     width: 100%;
+    height: 200px;
   }
   #fourth{
     height: 500px;
+  }
+  #fourth .fourth-info{
+    margin-top: 150px;
   }
   #fourth .swiper-slide h3{
     font-size: 22px;
