--- a/css/media.css
+++ b/css/media.css
@@ -386,6 +386,13 @@
     width: 100%;
     margin: 0 auto;
   }
+  #third .third-info{
+    width: 100%;
+    text-align: center;
+    margin-top: 150px;
+    margin-left: 20px;
+    padding: 0;
+  }
   #third .item-wrap{
     position: relative;
     width: 50%;
@@ -403,7 +410,7 @@
     display: block;
     left: 0;
     width: 100%;
-    padding-left: 25px;
+    padding-left: 30px;
     margin: 0 auto;
     padding-top: 0;
   }
@@ -416,6 +423,15 @@
   #third .item-wrap .item .item1-txt ul li a{
     font-size: 14px;
   }
+  #third .item-wrap .item2 .item2-txt p:first-child{
+    font-size: 18px;
+  }
+  #third .item-wrap .item2 .item2-txt p:nth-child(2){
+    font-size: 28px;
+  }
+  #third .item-wrap .item2 .item2-txt ul li a{
+    font-size: 14px;
+  }
   #third .item-wrap .item2 .item2-txt{
     position: absolute;
     display: block;
@@ -425,7 +441,7 @@
     right: 0;
     bottom: 0;
     top: 1100px;
-    margin-left: 50px;
+    margin-left: 40px;
     padding-top: 30px;
   }
   #third .item-wrap .item .item1 img{
@@ -443,6 +459,7 @@
     height: 410px;
     z-index: 110;
     background-position: center;
+    margin-top: 50px;
   }
   #third .item-wrap .item2 .item2-img{
     width: 100%;
@@ -453,7 +470,7 @@
   #third .item-wrap .item2{
     display: block;
     width: 100%;
-    height: 200px;
+    height: auto;
   }
   #fourth{
     height: 500px;
@@ -479,12 +496,29 @@
     width: auto;
     height: 400px;
   }
+  #six .info-wrap .info-text{
+    text-align: left;
+    display: inline-block;
+  }
   #six .info-wrap .info-alltext{
     display: block;
     position: relative;
     width: 50%;
     margin: 0 auto;
     padding-top: 70px;
+    text-align: center;
+  }
+  #six .info-wrap .info-icon .info-text{
+    display: inline-block;
+  }
+  #six .info-wrap .info-icon{
+    padding-right: 20px;
+  }
+  #six .info-wrap .info-icon img{
+    display: inline-block;
+  }
+  #six .info-wrap .info-icon2 img{
+    display: inline-block;
   }
   #footer .footer-wrap .mobile-foot-logo{
     display: inline-block;
@@ -504,5 +538,171 @@
 }
 
 @media screen and ( max-width: 480px ) {
-
+  #all-wrap{ width: 100%; margin: 0 auto;}
+  #headerwrap .header .mainlogo img{
+    width: 140px;
+    height: auto;
+  }
+  #main-content{ height: 500px;}
+  .pt-50{
+    font-size: 36px;
+  }
+  .m-fs-26{
+    font-size: 14px;
+  }
+  .mt-10{
+    font-size: 12px;
+  }
+  .swiper-button-next, .swiper-container-rtl .swiper-button-prev{
+    top: 59%;
+  }
+  .swiper-button-prev, .swiper-container-rtl .swiper-button-next{
+    top: 59%;
+  }
+  #first p:first-child{
+    font-size: 14px;
+  }
+  #first .first-sec h2{
+    font-size: 36px;
+  }
+  #first .first-sec .first-info p:nth-child(3){
+    font-size: 12px;
+  }
+  #first .first-sec .first-info p:nth-child(4){
+    font-size: 10px;
+  }
+  #first .first-sec{
+    padding: 0;
+  }
+  #second{
+    min-height: 1000px;
+  }
+  #second p:first-child{
+    font-size: 14px;
+  }
+  #second .second-info h2{
+    font-size: 36px;
+  }
+  #second .second-menu .menu1 .menu-top .menu-top01{
+    font-size: 18px;
+  }
+  #second .second-menu .menu1 .menu-btn .btn-1 a{
+    font-size: 12px;
+  }
+  #second .second-menu .menu1 .menu-btn .btn-2 a{
+    font-size: 12px;
+  }
+  #second .second-menu .menu1 .menu-btn p{
+    padding: 0;
+  }
+  #second .second-menu .menu1 .menu-btn span{
+    padding-left: 0;
+  }
+  #second .second-menu .menu1 .menu-top i{
+    left: 88%;
+  }
+  #second .second-menu .img1{
+    width: auto;
+    height: 250px;
+  }
+  #second .second-menu .img2{
+    width: auto;
+    height: 250px;
+  }
+  #second .second-menu .img3{
+    width: auto;
+    height: 250px;
+  }
+  #second .second-menu .img4{
+    width: auto;
+    height: 250px;
+  }
+  #third{
+    width: 70%;
+    margin: 0 auto;
+  }
+  #third .third-info p:first-child{
+    font-size: 14px;
+  }
+  #third .third-info h2{
+    font-size: 36px;
+  }
+  #third .third-info{
+    margin-left: 0;
+  }
+  #third .item-wrap .item .item1 img{
+    width: 100%;
+  }
+  #third .item-wrap .item .item1{
+    width: 300px;
+  }
+  #third .item-wrap{
+    margin: 0;
+  }
+  #third .item-wrap .item .item1-txt{
+    width: 300px;
+  }
+  #third .item-wrap .item .item1-txt p:first-child{
+    font-size: 16px;
+  }
+  #third .item-wrap .item .item1-txt p:nth-child(2){
+    font-size: 24px;
+  }
+  #third .item-wrap .item .item1-txt ul li a{
+    font-size: 12px;
+  }
+  #third .item-wrap .item2 .item2-img img{
+    width: 100%;
+    right: 10%;
+  }
+  #third .item-wrap .item2{
+    display: flex;
+    width: 300px;
+    height: auto;
+    align-items: flex-start;
+    justify-content: flex-start;
+  }
+  #third .item-wrap .item2 .item2-img{
+    width: 320px;
+  }
+  #third .item-wrap .item2 .item2-txt{
+    width: 320px;
+  }
+  #third .item-wrap .item2 .item2-txt ul li::before{
+    left: 0;
+  }
+  #third .item-wrap .item2 .item2-txt{
+    text-align: left;
+  }
+  #third .item-wrap .item2 .item2-txt p:first-child{
+    font-size: 16px;
+  }
+  #third .item-wrap .item2 .item2-txt p:nth-child(2){
+    font-size: 24px;
+  }
+  #third .item-wrap .item2 .item2-txt ul li a{
+    font-size: 12px;
+    padding-left: 20px;
+  }
+  #third .item-wrap .item2 .item2-txt{
+    padding-top: 20px;
+  }
+  #fourth .fourth-info{
+    margin-top: 50px;
+  }
+  #six .info-wrap .info-alltext .fw-400{
+    font-size: 12px;
+  }
+  #six .info-wrap .info-alltext .fs-50{
+    font-size: 28px;
+  }
+  #six .info-wrap .info-icon .info-text{
+    font-size: 12px;
+  }
+  #six .info-wrap .info-alltext span{
+    font-size: 12px;
+  }
+  #six .info-wrap .info-icon2{
+    width: 200px;
+  }
 }
