--- a/css/style.css
+++ b/css/style.css
@@ -1,6 +1,7 @@
 @charset "UTF-8";
 @import url('https://fonts.googleapis.com/css2?family=Montaga&display=swap');
-
+@import url('https://fonts.googleapis.com/css2?family=Noto+Sans+KR:wght@100;300;400;500;700;900&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Montserrat:wght@100;200;300;400;500;600;700;800;900&display=swap');
 body{
   width: 100%;
   max-width: 1700px;
@@ -877,6 +878,7 @@ input[type=checked]#gnbcheck{ display: none; }
 
 #six .info-wrap .info-icon2 img{
   position: absolute;
+  display: flex;
 }
 
 #six .info-wrap .info-icon .info-text{
