--- a/css/style.css
+++ b/css/style.css
@@ -65,8 +65,11 @@ br .pc{
   max-width: 100%;
 } */
 
-input[type=checked]#gnbcheck{ display: none; }
-
+input[type=checked]#gnbcheck{
+  display: none;
+  -webkit-appearance: none;
+ }
+input{ display: none ;}
 #mobile_close_btn{
   position: absolute;
   width: 40px;
